[Completed #45223263] Not exactly like the old Google Docs resume, but using its main ideas (colors, alignments). Forced page breaks before some sections. Logos stored locally to avoid bandwidth usage and loading delays.

--- a/resume-portugues.css
+++ b/resume-portugues.css
@@ -10,7 +10,7 @@
 .level-beginner:after { content: " (Iniciante)"; } */
 
 /* Languages */
-.language-native { display: none; }
+.language-native, ul.cloud li.language-native { display: none; }
 .language-fluent:after { content: " fluente"; }
 .language-advanced:after { content: " avançado"; }
 .language-beginner:after { content: " básico"; }
